# cakettp

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/command/: execute_request.rs  mod.rs  run_program.rs
src/pkg/: mod.rs
src/pkg/client/: adapted_client.rs  adapted_client_builder.rs  mod.rs
src/pkg/display/: console.rs
src/pkg/http_parser/: example.http  file_parser.rs  http_parser.rs  mod.rs  model.rs  regex.rs  utils.rs  variable_parser.rs
