[package]
name = "cakettp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "unstable-styles"] }
colored_json = "4.1.0"
console = "0.15.7"
crossterm = "0.27.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
minus = { version = "5.5.1", features = ["static_output"] }
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.22"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
